fix dendrogram collapse

--- a/impl/public/css/style.css
+++ b/impl/public/css/style.css
@@ -2,7 +2,6 @@
     fill: none;
     stroke: #808080;
     stroke-width: 2px;
-    stroke-linecap: round;
 }
 
 .nodeRadial {
@@ -15,7 +14,6 @@
 
 .link--active {
     stroke: blue !important;
-    stroke-linecap: round;
     stroke-width: 2px;
 }
 
